<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/timelessbold"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvBase"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:fontFamily="@font/timeless"
            android:gravity="center"
            android:text="@string/tv_base_currency"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTRY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:fontFamily="@font/timeless"
            android:gravity="center"
            android:text="@string/tv_try_rate"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:fontFamily="@font/timeless"
            android:gravity="center"
            android:text="@string/tv_usd_rate"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:fontFamily="@font/timeless"
            android:gravity="center"
            android:text="@string/tv_gbp_rate"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJPY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:fontFamily="@font/timeless"
            android:gravity="center"
            android:text="@string/tv_jpy_rate"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/timelessbold"
            android:onClick="getRates"
            android:text="@string/btn_get_rates"
            android:textColor="@color/colorButtonGetRates" />

    </LinearLayout>

</LinearLayout>